--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+.App {
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#link__section a {
+    display: block;
+    text-align: center;
+}
+
 #slack {
     display: none;
 }
