--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:display=swap');
+
 .App {
     min-height: 100vh;
     width: 100%;
@@ -5,11 +7,24 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+}
+
+#link__section {
+    width: 100%;
 }
 
 #link__section a {
     display: block;
     text-align: center;
+    text-decoration: none;
+    color: #101828;
+    background-color: #EAECF0;
+    margin: 1rem auto;
+    width: 80%;
+    padding: 1.5rem;
+    border-radius: 8px;
 }
 
 #slack {
