--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,13 @@
     align-items: center;
     font-family: 'Inter', sans-serif;
     font-weight: 500;
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
 }
 
 #link__section {
     width: 100%;
+    margin: 1rem auto;
 }
 
 #link__section a {
@@ -21,10 +24,22 @@
     text-decoration: none;
     color: #101828;
     background-color: #EAECF0;
-    margin: 1rem auto;
+    margin: 1.5rem auto;
     width: 80%;
-    padding: 1.5rem;
+    padding: 1.8rem;
     border-radius: 8px;
+    font-weight: 500;
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+
+#social__secttion {
+    width: 100%;
+}
+
+#social__section img {
+    margin: auto 0.5rem;
+    margin-bottom: 5rem;
 }
 
 #slack {
