--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
     font-family: 'Inter', sans-serif;
     font-weight: 500;
     margin-top: 2.5rem;
-    margin-bottom: 2.5rem;
+    margin-bottom: 1rem;
 }
 
 #link__section {
@@ -25,12 +25,13 @@
     color: #101828;
     background-color: #EAECF0;
     margin: 1.5rem auto;
-    width: 80%;
-    padding: 1.8rem;
+    width: 75%;
+    padding: 1.7rem;
     border-radius: 8px;
     font-weight: 500;
     font-size: 1.2rem;
     font-weight: 500;
+    border: 1px solid #EAECF0
 }
 
 #social__secttion {
@@ -38,8 +39,17 @@
 }
 
 #social__section img {
-    margin: auto 0.5rem;
-    margin-bottom: 5rem;
+    margin: auto 1rem;
+    margin-bottom: 8rem;
+}
+
+footer {
+    width: 85%;
+    padding-top: 2.5rem;
+    padding-bottom: 2rem;
+    display: flex;
+    justify-content: space-between;
+    border-top: solid 1px #EAECF0;
 }
 
 #slack {
