--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
 
 .App {
     min-height: 100vh;
@@ -12,6 +14,12 @@
     margin-top: 2.5rem;
     margin-bottom: 1rem;
 }
+
+#profile__section #twitter {
+    font-size: 1.4rem;
+    font-weight: 700;
+}
+
 
 #link__section {
     width: 100%;
@@ -28,9 +36,9 @@
     width: 75%;
     padding: 1.7rem;
     border-radius: 8px;
-    font-weight: 500;
+    font-weight: 550;
     font-size: 1.2rem;
-    font-weight: 500;
+    font-weight: 00;
     border: 1px solid #EAECF0
 }
 
