--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
 
 .App {
-    min-height: 100vh;
+    /* min-height: 100vh; */
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -55,7 +55,7 @@
 
 #social__section img {
     margin: auto 0.8rem;
-    margin-bottom: 5rem;
+    margin-bottom: 7rem;
 }
 
 footer {
