--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
 
 
+::placeholder {
+    color: #667085;
+    font-family: 'Inter', sans-serif;
+}
 
 .home__container {
     /* min-height: 100vh; */
@@ -100,12 +104,56 @@ footer {
 
 /* CONTACT SECTION */
 .contact__container {
-    width: 60%;
-    margin: auto;
+    margin: 4rem auto;
+    display: flex;
+    justify-content: center;
 }
 
-.contact__container label {
+.contact__content {
+    width: 50%;
+}
+
+.contact__content h3 {
+    font-size: 1.8rem;
+    /* font-size: 36px; */
+    color: #101828;
+}
+
+.contact__content p {
+    color: #475467;
+    margin-top: -0.5rem;
+}
+
+.contact__content label {
     display: block;
+    color: #344054;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+}
+
+.contact__content input[type=text], .contact__content input[type=email], .contact__content textarea {
+    width: 100%;
+    padding: 10px 14px;
+    border: solid 1px #D0D5DD;
+    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+    border-radius: 8px;
+    background: #FFFFFF;
+}
+
+
+/* .contact__content input[type=text]:focus, .contact__content input[type=email]:focus, .contact__content textarea:focus {
+    border: solid 1px #D0D5DD;
+} */
+
+.contact__content textarea {
+    height: 132px;
+}
+
+.name__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: space-between;
+    column-gap: 3rem;
 }
 
 /* media query */
