--- a/src/App.css
+++ b/src/App.css
@@ -137,16 +137,13 @@ footer {
     border: solid 1px #D0D5DD;
     box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
     border-radius: 8px;
+    margin-bottom: 1rem;
     background: #FFFFFF;
 }
 
-
-/* .contact__content input[type=text]:focus, .contact__content input[type=email]:focus, .contact__content textarea:focus {
-    border: solid 1px #D0D5DD;
-} */
-
 .contact__content textarea {
     height: 132px;
+    resize: none;
 }
 
 .name__container {
