--- a/src/App.css
+++ b/src/App.css
@@ -167,6 +167,29 @@ footer {
     margin-right: 0.5rem;
 }
 
+.contact__content .submit__btn__container {
+    width: 100%;
+    margin-bottom: 2rem;
+    text-align: center;
+}
+
+.contact__content .submit__btn__container button {
+    width: 100%;
+    padding: 12px 30px;
+    background: #1570EF;
+    border: 1px solid #1570EF;
+    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+    border-radius: 8px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+
+
+/* Base/White */
+
+color: #FFFFFF;
+}
+
 /* media query */
 @media screen and (max-width: 850px) {
     .share__container {
