--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,6 @@
     font-family: 'Inter', sans-serif;
 }
 
-.App {
-    box-sizing: border-box;
-}
-
 .home__container {
     /* min-height: 100vh; */
     width: 100%;
@@ -138,13 +134,19 @@ footer {
     margin-bottom: 0.5rem;
 }
 
+.name__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: space-between;
+    column-gap: 1.5rem;
+}
+
 .contact__content input[type=text], .contact__content input[type=email], .contact__content textarea {
     width: 100%;
     padding: 10px 14px;
     border: solid 1px #D0D5DD;
     box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
     border-radius: 8px;
-    margin-bottom: 1rem;
     background: #FFFFFF;
     box-sizing: border-box;
 }
@@ -152,13 +154,6 @@ footer {
 .contact__content textarea {
     height: 132px;
     resize: none;
-}
-
-.name__container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-content: space-between;
-    column-gap: 1.5rem;
 }
 
 .agree__container {
@@ -206,9 +201,15 @@ footer {
     cursor: not-allowed;
 }
 
+.firstname__container {
+    position: relative;
+}
+
 p.error {
     color: #F83F23;
+    font-size: 0.9rem;
 }
+
 
 /* media query */
 @media screen and (max-width: 850px) {
